# pydantic-v2-essentials

./: .gitignore  README.md  pyproject.toml
Toon/: PROJECT_SUMMARY.md  QUICKSTART.md  README.md  examples_pydantic_toon.py  llm_integration_example.py  pydantic_toon.py  requirements.txt  test_pydantic_toon.py
