[project]
name = "pydantic-v2-essentials"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.23.4",
    "pydantic>=2.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
package = false

[tool.setuptools]
packages = []
